# Rag-Agent

./: .gitignore  agent.ipynb  main.py  pyproject.toml
knowledge/: README.md
memory/: AGENT.md
sandbox/: agent.ipynb  agents.txt  content.txt  langgraph.txt  local_rag_report.txt  rag_research_agent_report.txt
skills/rag-research/: SKILL.md
skills/researcher/: SKILL.md
skills/web-search/: SKILL.md
src/: agent.py  prompts.py
src/tools/: rag.py  tool.py
