[project]
name = "deepagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.10",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-google-community[gmail]>=5.0.0",
    "langchain-openai>=1.3.2",
    "load-dotenv>=0.1.0",
    "playwright>=1.60.0",
    "tavily>=1.1.0",
    "wikipedia>=1.4.0",
]
